--- a/reimbursement/templates/reimbursements_table.html
+++ b/reimbursement/templates/reimbursements_table.html
@@ -17,7 +17,7 @@
                         {% if filter %}
                             <form action="" method="get" class="form form-inline text-left filter">
                                 {% bootstrap_form filter.form size='small' %}
-                                {% bootstrap_button 'Search' size='small' button_class='btn-info' %}
+                                <button type="submit" class="btn btn-block btn-info">Search</button>
                             </form>
                         {% endif %}
                     </div>
