--- a/applications/templates/phases/application.html
+++ b/applications/templates/phases/application.html
@@ -39,7 +39,7 @@
     <p> When decisions are released, you'll be able to see your results on this page.<br>
         If you have any questions or concerns, you can still reach us at {{ h_contact_email }}<br>
         {% if application.can_be_edit %}
-            Edit your application <a href="?phase=application">here</a></p>
+            Edit your application <a href="?phase=general">here</a></p>
         {% endif %}
 {% endif %}
 
