add auto messaging to hackathon devs

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,9 +10,7 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    {% if h_theme_color %}
-        <meta name="theme-color" content="{{ h_theme_color }}">
-    {% endif %}
+    <meta name="theme-color" content="#f8f8f8">
     <meta name="author" content="{{ h_name }}">
     <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
