--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -3,14 +3,19 @@
 {% load static %}
 
 
-{% block head %}
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-{% endblock %}
-
-{% block title %}¯\_(ツ)_/¯ | Page not found {% endblock %}
+{% block head_title %}¯\_(ツ)_/¯ | Page not found {% endblock %}
 
 {% block body %}
-    <h1 class="text-center margin-top">¯\_(ツ)_/¯</h1>
-    <h2  class="text-center">404 Page not found</h2>
-    <p  class="text-center">This specified file was not found on this website. Please check the URL for mistakes and try again.</p>
+    <style>
+        .text-white {
+            color: white;
+        }
+    </style>
+    <div class="text-white">
+        <h1 class="text-center margin-top">¯\_(ツ)_/¯</h1>
+        <h2 class="text-center">404 Page not found</h2>
+        <p class="text-center">This specified file was not found on this website. Please check the URL for mistakes and
+            try
+            again.</p>
+    </div>
 {% endblock %}
