--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -2,22 +2,27 @@
 
 {% load static %}
 
-{% block head %}
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-{% endblock %}
 
-{% block title %}500 Oops {% endblock %}
+
+{% block head_title %}500 Oops {% endblock %}
 
 {% block body %}
+    <style>
+        .text-white {
+            color: white;
+        }
+    </style>
+    <div class="text-white">
+        <h1 class="text-center margin-top">500 Oops</h1>
+        <h2 class="text-center">Server Error </h2>
+        <p class="text-center">It seems like you found an error. Please reach us out
+            at {{ h_contact_email|urlize }} if the problem persists.</p>
+        {% if h_issues_url %}
+            <p class="text-center">
+                Or you can open an issue
+                <a target="_blank" href="{{ h_issues_url }}">here</a>.
+            </p>
+        {% endif %}
+    </div>
 
-    <h1 class="text-center margin-top">500 Oops</h1>
-    <h2 class="text-center">Server Error </h2>
-    <p class="text-center">It seems like you found an error. Please reach us out
-        at {{ h_contact_email|urlize }} if the problem persists.</p>
-    {% if h_issues_url %}
-        <p class="text-center">
-            Or you can open an issue
-            <a target="_blank" href="{{ h_issues_url }}">here</a>.
-        </p>
-    {% endif %}
 {% endblock %}
