--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -17,10 +17,10 @@
         <h2 class="text-center">Server Error </h2>
         <p class="text-center">It seems like you found an error. Please reach us out
             at {{ h_contact_email|urlize }} if the problem persists.</p>
-        {% if h_issues_url %}
+        {% if h_repo %}
             <p class="text-center">
                 Or you can open an issue
-                <a target="_blank" href="{{ h_issues_url }}">here</a>.
+                <a target="_blank" href="{{ h_repo }}issues/new">here</a>.
             </p>
         {% endif %}
     </div>
