--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% block head %}
     {% endblock %}
 
@@ -137,25 +138,71 @@
     </nav>
 {% endblock %}
 <div class="content container">
+    <div class="content-inside">
 
-    {% block body %}
-        <div class="margin-top">
-            {% bootstrap_messages %}
-            <div class="col-md-6 col-md-offset-3">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        {% block content %}
-                        {% endblock %}
 
+        {% block body %}
+            <div class="margin-top">
+                {% bootstrap_messages %}
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            {% block content %}
+                            {% endblock %}
+
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        {% block extra_body %}
-        {% endblock %}
+            {% block extra_body %}
+            {% endblock %}
 
-    {% endblock %}
+        {% endblock %}
+    </div>
 </div>
+<footer class="footer navbar-fixed-bottom">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-sm-6">
+                <p>Have a question? We're here for you! {{ h_contact_email | urlize }}</p>
+            </div>
+            <div class="social-icons col-sm-6 text-right text-center-xs">
+                {% if h_tw %}
+                    <a class="btns" target="_blank" href="https://twitter.com/{{ h_tw }}">
+                        <i aria-hidden="true" class="fa fa-twitter fa-lg"></i>
+                    </a>
+                {% endif %}
+                {% if h_fb %}
+                    <a class="btns" target="_blank" href="https://fb.com/{{ h_fb }}">
+                        <i aria-hidden="true" class="fa fa-facebook fa-lg"></i>
+                    </a>
+                {% endif %}
+                {% if h_contact_email %}
+                    <a class="btns" target="_blank" href="mailto:{{ h_contact_email }}">
+                        <i aria-hidden="true" class="fa fa-envelope-o fa-lg"></i>
+                    </a>
+                {% endif %}
+
+                {% if h_repo %}
+                    <a class="btns" target="_blank" href="{{ h_repo }}">
+                        <i aria-hidden="true" class="fa fa-github fa-lg"></i>
+                    </a>
+                {% endif %}
+
+
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <small>Made with <i class="fa fa-heart" aria-hidden="true"></i> by {{ h_name }} </small>
+
+            </div>
+        </div>
+    </div>
+</footer>
+
 {% if h_ga %}
     <script>
         (function (i, s, o, g, r, a, m) {
