--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -191,13 +191,14 @@
                 {% endif %}
 
 
-
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
                 <small>Made with <i class="fa fa-heart" aria-hidden="true"></i> by {{ h_name }} </small>
-
+                {# OH NO YOU FOUND ME! This is just an internal joke that appeared at the first edition of HackUPC. #}
+                {# You can remove it, but if you dont care, please keep it. I'm a sentimental - Gerard Casas contact@gerard.space #}
+                <span style="display: none">BIENE {{ h_name }}</span>
             </div>
         </div>
     </div>
