--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -55,6 +55,16 @@
                 return has_team.prop("checked");
             });
 
+            var needs_reimb = $('input[name="reimb"][value="True"]');
+            var no_reimb = $('input[name="reimb"][value="False"]');
+            var reimb_amout = $('#id_reimb_amount');
+            conditional_field(reimb_amout, needs_reimb, function () {
+                return needs_reimb.prop("checked");
+            });
+            conditional_field(reimb_amout, no_reimb, function () {
+                return needs_reimb.prop("checked");
+            });
+
             var is_firsttime = $('input[name="first_timer"][value="True"]');
             var experienced = $('input[name="first_timer"][value="False"]');
             var projects = $('#id_projects');
