--- a/organizers/templates/applications_list.html
+++ b/organizers/templates/applications_list.html
@@ -30,6 +30,8 @@
                     {% if user.is_director %}
                         <div class="panel-footer">
                             <a href="{% url 'invite_list' %}" class="btn-block btn btn-default">Invite applications</a>
+                            <a href="{% querystring '_export'='csv' %}" class="btn-block btn btn-info">Download
+                                CSV</a>
                         </div>
                     {% endif %}
                 </div>
