--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -11,6 +11,9 @@
     <form action="" method="post" class="form form-horizontal">
         {% csrf_token %}
         {% bootstrap_form form layout="horizontal" %}
+        <div class="col-md-9 col-md-offset-3">
+            <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+        </div>
         <button class="btn btn-primary btn-block" type="submit">{% trans "Sign In" %}</button>
         {% if not h_app_closed %}
             <a class="btn btn-default btn-block"
