--- a/applications/templates/phases/verify.html
+++ b/applications/templates/phases/verify.html
@@ -4,5 +4,6 @@
 
     </p>
 {% else %}
-    Please check your inbox  to verify that <b>{{ user.email }}</b> is your email.
+    Please check your inbox  to verify that <b>{{ user.email }}</b> is your email. Check your SPAM folder. If you
+    haven't received an email, you can ask to send it again <a href="{% url 'send_email_verification' %}">here</a>.
 {% endif %}
