--- a/organizers/templates/invite_list.html
+++ b/organizers/templates/invite_list.html
@@ -1,39 +1,15 @@
-{% extends "base.html" %}
-{% load humanize %}
-{% load django_tables2 %}
-{% load bootstrap3 %}
-{% load static %}
+{% extends "base_table.html" %}
+
 {% block head_title %}Invite applications {% endblock %}
-{% block head %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="//code.jquery.com/jquery-2.0.0.min.js"></script>
-{% endblock %}
-{% block body %}
-    <div class="row margin-top">
-        {% bootstrap_messages %}
-        <div class="col-md-12">
-            <div style="text-align: center;">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="text-center">Invite</h4>
-                    </div>
-                    <div class="panel-body">
-                        {% if filter %}
-                            <form action="" method="get" class="form form-inline text-left filter">
-                                {% bootstrap_form filter.form size='small' %}
-                                {% bootstrap_button 'Search' size='small' button_class='btn-info' %}
-                            </form>
-                        {% endif %}
-                    </div>
-                    <form action="" method="post">
-                        {% csrf_token %}
-                        {% render_table table 'django_tables2/bootstrap-responsive.html' %}
-                        <button name="invite" class="btn btn-success btn-block"
-                                value="invite">Invite
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </div>
+
+
+{% block table_title %}Invite applications{% endblock %}
+
+
+{% block table_footer %}
+    <div class="panel-footer">
+        <button name="invite" class="btn btn-success btn-block"
+                value="invite">Invite
+        </button>
     </div>
 {% endblock %}
