--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -52,8 +52,8 @@
                         <h4 class="text-center">Background</h4>
                         <dl class="dl-horizontal">
                             {% include 'include/field.html' with desc='First time' value=app.first_timer|yesno:'Yes,No,Maybe' %}
-                            {% include 'include/field.html' with desc='Looking forward?' value=app.description|safe|urlize %}
-                            {% include 'include/field.html' with desc='Projects?' value=app.projects|safe|urlize %}
+                            {% include 'include/field.html' with desc='Why excited?' value=app.description|safe|urlize %}
+                            {% include 'include/field.html' with desc='Projects' value=app.projects|safe|urlize %}
                             {% include 'include/field.html' with desc='Team mates' value=app.teammates %}
                             {% include 'include/field.html' with desc='Excited about' value=app.excited %}
                         </dl>
