--- a/reimbursement/templates/include/reimbursement_info.html
+++ b/reimbursement/templates/include/reimbursement_info.html
@@ -12,7 +12,7 @@
 {% else %}
     <dl>
         <dt>Origin</dt>
-        <dd>{{ reimbursement.origin_city }} ({{ reimbursement.origin_country }})</dd>
+        <dd>{{ reimbursement.origin }}</dd>
 
         <dt>Status</dt>
         <dd>{{ reimbursement.get_status_display }}</dd>
