--- a/reimbursement/templates/mails/reimbursement_message.html
+++ b/reimbursement/templates/mails/reimbursement_message.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <p>    Congrats {{ app.user.get_full_name }}, you have been granted travel reimbursement for this edition of {{ h_name }}. We will
-    reimburse you <b>{{ reimb.assigned_money }}{{ h_currency }}</b> as you are coming from {{ reimb.origin_city }} ({{ reimb.origin_country }}).
+    reimburse you <b>{{ reimb.assigned_money }}{{ h_currency }}</b> as you are coming from {{ reimb.origin }}.
     <b>You have {{ h_r_days }} days to submit a receipt of your tickets.</b>
 </p>
     {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
