--- a/applications/static/css/profile.css
+++ b/applications/static/css/profile.css
@@ -28,6 +28,8 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
     color: black;
 }
 
+
+
 .no-padding {
     padding: 0 !important;
 }
@@ -41,17 +43,23 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
     border-left-color: green !important;
 }
 
-#id_under_age > div, #id_tshirt_size > div, #id_graduation_year > div, #id_team > div, #id_first_timer > div,
-#id_scholarship > div{
-    display: inline-block;
-    padding-right: 20px;
-    margin-bottom: 0;
-    margin-top: 0;
-    font-weight: 400;
-    vertical-align: middle;
-    cursor: pointer;
+.margin-left {
+    border-left: 1px solid #eee;
 }
 
-.radio {
+.margin-right {
+    border-right: 1px solid #eee;
+}
+
+@media (max-width: 768px) {
+
+    .margin-left {
+        border-left: 0;
+        border-top: 1px solid #eee;
+    }
+
+    .margin-right {
+        border-right: 0;
+    }
 
 }
