--- a/applications/templates/cancel.html
+++ b/applications/templates/cancel.html
@@ -1,55 +1,21 @@
-{% extends 'base.html' %}
+{% extends 'base_tabs.html' %}
 {% load static %}
 {% block head_title %}Cancel application{% endblock %}
+{% block panel %}
 
-{% block head %}
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-{% endblock %}
+    {% if error %}
 
-{% block body %}
+        {{ error }}.Please contact us if you think this is an error: {{ h_contact_email|urlize }}.
+        <a href="{% url 'dashboard' %}" class="btn btn-info btn-block"> Back to your profile</a>
 
-    <div class="confirm-content">
-        <div class="col-md-8 col-md-offset-2">
-            {% if error %}
-                <div class="panel panel-danger">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">
-                            {% if application %}
-                                We are sorry {{ application.user.get_full_name }}
-                            {% else %}
-                                ¯\_(ツ)_/¯
-                            {% endif %}
-                        </h3>
-                    </div>
-                    <div class="panel-body">
-                        {{ error }}
-                        <a href="{% url 'dashboard' %}" class="btn btn-default btn-block"> Back to your profile</a>
-                    </div>
-                    <div class="panel-footer">
-                        Please contact us if you think this is an error: {{ h_contact_email|urlize }}
-                    </div>
-                </div>
+    {% else %}
 
-            {% else %}
-
-                <div class="panel panel-warning">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Warning!</h3>
-                    </div>
-                    <div class="panel-body">
-                        After cancelling your application you will lose the right to attend the hackathon as a
-                        participant.
-                    </div>
-                    <div class="panel-footer">
-                        <form action="" method="post">
-                            {% csrf_token %}
-                            <input type="hidden" value="cancel_anyway" name="action">
-                            <button class="btn btn-danger btn-lg btn-block">Cancel anyways</button>
-                        </form>
-                        <a href="{% url 'dashboard' %}" class="btn btn-default btn-block"> Back to your dashboard</a>
-                    </div>
-                </div>
-            {% endif %}
-        </div>
-    </div>
+        <p class="lead">Remember! After cancelling your application you will lose the right to attend the hackathon as a
+        participant. Are you sure you want to cancel your application?</p>
+        <form action="" method="post">
+            {% csrf_token %}
+            <input type="hidden" value="cancel_anyway" name="action">
+            <button class="btn btn-danger btn-lg btn-block">Cancel anyways</button>
+        </form>
+    {% endif %}
 {% endblock %}
