--- a/organizers/templates/ranking.html
+++ b/organizers/templates/ranking.html
@@ -1,45 +1,11 @@
-{% extends "base.html" %}
+{% extends "base_table.html" %}
 {% load humanize %}
 {% load static %}
-{% load bootstrap3 %}
 {% block head_title %}Reviewers Ranking{% endblock %}
-{% block head %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% block extra_panel %}
+
+    <p>So you think you have reviewed tons, huh?</p>
+    <p>Drop your self esteem and look at the ranking.</p>
 {% endblock %}
-{% block body %}
-    <div class="row margin-top">
-        {% bootstrap_messages %}
-        <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">{{ h_name }} Reviewer Leaderboard</div>
-                <div class="panel-body">
-                    <p>So you think you have reviewed tons, huh?</p>
-                    <p>Drop your self esteem and look at the ranking.</p>
-                </div>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Position</th>
-                        <th>Email</th>
-                        <th>Reviews</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for user in ranking %}
-                        <tr>
-                            <td>{{ forloop.counter | ordinal }}</td>
-                            <td>{{ user.email }}</td>
-                            <td>{{ user.vote_count }}</td>
-                        </tr>
-                    {% empty %}
-                        <tr>
-                            <td colspan="3" class="text-center">No organizers voted yet... Why? :'(</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            </ul>
-        </div>
-    </div>
-{% endblock %}
+
+
