--- a/reimbursement/templates/include/reimbursement_form.html
+++ b/reimbursement/templates/include/reimbursement_form.html
@@ -28,8 +28,17 @@
 <script>
 
     $(document).ready(function () {
-            make_field_typeahead('origin_country', '{% static 'countries.json' %}');
-
+            $("#id_origin").typeahead({
+                minLength: 3,
+                source: function (query, process) {
+                    $.get('https://api.teleport.org/api/cities/', {search: query}, function (data) {
+                        var cities = jQuery.map(data._embedded["city:search-results"], function (c) {
+                            return c.matching_full_name;
+                        });
+                        return process(cities);
+                    });
+                }
+            });
             var multiple_hacker = $('#id_multiple_hackers');
             var teammates = $('#id_friend_emails');
             conditional_field(teammates, multiple_hacker, function () {
