--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -16,7 +16,7 @@
         </div>
         <button class="btn btn-primary btn-block" type="submit">{% trans "Sign In" %}</button>
         {% if not h_app_closed %}
-            <a class="btn btn-default btn-block"
+            <a class="btn btn-reverse btn-block"
                href="{% url 'account_signup' %}">{% trans "...or sign up if you don't have an account" %}</a>
         {% endif %}
 
