--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -17,11 +17,11 @@
             <p class="lead">Application deadline:{% include 'include/deadline_countdown.html' %}</p>
         {% endif %}
 
-        <form action="" method="post" class="form form-horizontal">
+        <form action="" method="post" class="form">
             {% csrf_token %}
-            {% bootstrap_form form layout="horizontal" %}
+            {% bootstrap_form form  %}
             <button class="btn btn-primary btn-block" type="submit">{% trans "Sign Up" %}</button>
-            <a class="btn btn-default btn-block"
+            <a class="btn btn-reverse btn-block"
                href="{% url 'account_login' %}">{% trans "...or log in if you already have an account " %}</a>
         </form>
     {% endif %}
